[project]
name = "bank-finbourne-tester"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "ariadne>=0.23",
    "httpx>=0.27",
    "pydantic>=2.0",
    "lusid-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bank_finbourne_tester"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
